# yt-sync

./: .env  .gitignore  Cargo.toml  Dockerfile  channels.json
.github/workflows/: docker-build.yml
src/: main.rs
