[package]
name = "yt-sync"
version = "0.0.1"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4.19"
crossbeam = "0.8.0"
num_cpus = "1.15.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
youtube_dl = { version = "0.8.1", features = ["tokio"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }